# zendesk-sync

./: README.md  extract.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
tests/: test_zendesk_sync.py
zendesk_sync/: extract.py
