[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
license-expression = "MIT"
dependencies = [
    "google-cloud-storage>=2.2.1",
    "zenpy>=2.0.24",
    "setuptools>=60.10.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.1.0",
    "pytest>=7.1.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
extract.cmd = "python zendesk_sync/extract.py"
extract.env_file = ".env"
